# Final-CS-Project-ML-IDS

./: DB Lite Struction draft.sql  DB Struction draft.sql  README.md  SETUP.md  index.html
BackEndFiles/: environment.yml
BackEndFiles/database/: dsSchema.sql
backend/: README.md  dsSchema.sql  environment.yml  package.json  seed.sql  server.js
client/: README.md  index.html  tailwind.config.ts
client/src/: App.tsx
configs/: base.yaml
data/processed/: Weekly Meeting roles.csv
lccde/: __init__.py  config.py  data.py  evaluate.py  features.py  model.py  train.py
lccde/utils/: io.py  logging.py
lccde_project/: README.md  pyproject.toml
lccde_project/configs/: base.yaml
lccde_project/lccde/: __init__.py  config.py  data.py  evaluate.py  features.py  model.py  train.py
lccde_project/lccde.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lccde_project/lccde/utils/: io.py  logging.py
lccde_project/scripts/: evaluate.py  train.py
lccde_project/tests/: test_smoke.py
scripts/: evaluate.py  train.py
server/: app.py  config.py  machineLearning.py  package-lock.json  package.json  requirements.txt  server.js
server/models/: __init__.py  database.py
server/routes/: __init__.py  experiment.py  parameter.py  result.py
server/services/: __init__.py  lccde_service.py  ml_service.py
src/: App.tsx  index.css
src/api/: experiment.ts
src/components/: AppSidebar.tsx  ModelPerformance.tsx  NetworkTraffic.tsx  ROCCurve.tsx
src/hooks/: useApi.ts  useExperiments.ts  useResults.ts
src/pages/: CompareExperiments.tsx  (+3 more)
tests/: test_smoke.py
(+37 files in other folders)
